k8s/aat/cluster-00/admin/k8s-env-injector-mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: env-injector-webhook-cfg
  namespace: admin
  labels:
    app: env-injector
webhooks:
  - name: env-injector.hmcts.net
    clientConfig:
      service:
        name: env-injector-webhook-svc
        namespace: admin
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV5RENDQXJDZ0F3SUJBZ0lSQVBPZHN6ZE4waFpBZzZFUS9pMnMwQzR3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTWpBd01UQTNNakF5TmpRMVdoY05ORGt4TWpNd01qQXpOalExV2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FpSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnSVBBRENDQWdvQ2dnSUJBS3hYCmk0R3B4WlVhcGxxZHJjVU1LT0FHQ1dwK2prSnNwenR1eHhUWnpRVzJHV3N4dW9SVENpQ0xxdGpxMHduaFViUlMKb1QrNms3bWRVOXZSSFZxK1QvV1Z1WFB3OHlGNStwT2dsenhseUREb3R5dkVSaGlwOS9sT3NrdS8rVVVIL091QwoxVGZoVUM3WEMx [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        hmcts.github.com/envInjector: enabled
